# Univem

./: .gitignore  README.md
algorithms101/entrada_saida/: exercise3.py  exercise4.py  exercise6.py
algorithms101/examples/: example1.py
algorithms101/input_output/: exercise1.py  exercise2.py  exercise5.py  exercise7.py  exercise8.py  exercise9.py
algorithms101/sequencial_structure/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
avaliation/: mmc.c  mmc.cpp  showEven.cpp
computer_programming/po_13_jun/: main.cpp
data_structures/: lista_encadeada.cpp  todo
data_structures/avaliation/: avaliation.cpp
data_structures/avaliation_2_jun_2020/: main.cpp
data_structures/trab_3_jun_2020/: .gitignore  CMakeLists.txt  README.md  filaBanco  main.cpp
data_structures/trab_3_jun_2020/headers/: ]  actions.hpp  client.hpp  menu.hpp  priorityQueue.hpp  queue.hpp
data_structures/trab_3_jun_2020/src/: actions.cpp  client.cpp  main.cpp  menu.cpp  priorityQueue.cpp  queue.cpp
databases/: TrabalhoOA_9_oct.sql  trabalhoOA_9_oct.sql
databases/lecture_02/: database.sql
databases/lecture_03/: database.sql
databases/lecture_04/: database.sql
databases/lecture_06/: database.sql
databases/lecture_07/: database.sql
databases/po_20_nov/: 591149_592153.sql
embedded-systems/blinkLed/: blinkLed.ino
embedded-systems/car/: car.ino  main.ino
embedded-systems/challengeLDR/: challengeLDR.ino
embedded-systems/semadaroCruzamento/: semadaroCruzamento.ino
embedded-systems/semafaroSimples/: semafaroSimples.ino
embedded-systems/sosLed/: sosLed.ino
integrative_project/IoT_scenary/: ideas
integrative_project/mer_chat_bot/: database.sql
programming_lab/Fundamentos/: Aula2.py  Aula3.py  Aula4.py  Treinamento1.py  Treinamento2.py
programming_lab/input_output/: exercise1.py  exercise2.py  (+3 more)
programming_techniques/: LeonardoAronJoao_At06.py  db.py  main.py  test.py
rubiks-cv-project/: CMakeLists.txt  README.md  rubiks-cv.cpp
semafaroCruzamento/: semafaroCruzamento.ino
software_engeneering/: casos_de_uso
(+38 files in other folders)
